k8s/mysql-db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-mysql
  namespace: default
spec:
  serviceName: "db-mysql-svc"
  replicas: 1
  selector:
    matchLabels:
      app: db-mysql
  template:
    metadata:
      labels:
        app: db-mysql
    spec:
      # DB 노드에만 배치되도록 설정
      nodeSelector:
        node-role: db

      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"

        # 컨테이너 내부의 마운트 위치
        volumeMounts:
        - name: mysql-local-storage
          mountPath: /var/lib/mysql

      # statefulset을 위한 마운트 사용
      volumes:
      - name: mysql-local-storage
        hostPath:
          # EC2 인스턴스(Node)의 실제 물리적 경로
          path: /data/mysql-data
          # 폴더가 없으면 자동으로 생성
          type: DirectoryOrCreate


---
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-svc
  namespace: default
  labels:
    app: db-mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  clusterIP: None          # 로드밸런싱 없이 파드 IP 직접 반환 (statefulset이여서)
  selector:
    app: db-mysql
