k8s/nginx-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
      # 프로메테우스가 이 파드를 자동으로 찾아오게 만드는 힌트
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
        prometheus.io/job: "nginx"
    spec:
      nodeSelector:
        node-role: web
      containers:
        # ---  Nginx 컨테이너 영역 ---
        - name: nginx
          image: kimkiyeol/web-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          #  ConfigMap에 적힌 설정을 Nginx 설정 폴더에 꽂아넣음
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

        # 메트릭 추출용 사이드카 컨테이너
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            # 위에서 열어준 /stub_status 경로로 접속하여 데이터를 가져옴
            - -nginx.scrape-uri=http://localhost:80/stub_status
          ports:
            - containerPort: 9113
              name: metrics
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"

      # ConfigMap을 파드 내에서 볼륨으로 인식하도록 정의
      volumes:
        - name: config-volume
          configMap:
            name: web-nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx-svc
  namespace: default
spec:
  selector:
    app: web-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    # 프로메테우스 에이전트가 접근할 수 있도록 포트 추가 개방
    - name: metrics
      port: 9113
      targetPort: 9113
  type: NodePort
